websocketServer/server/out.txt
g++ -march=native -O3 -Wpedantic -Wall -Wextra -Wsign-conversion -Wconversion -std=c++17 -Iinclude -Isrc -IuSockets/src -flto server/server.cpp  uSockets/*.o -lz -o server.out
In file included from server/server.cpp:2:
In file included from include/App.h:52:
In file included from include/HttpContext.h:26:
include/AsyncSocket.h:215:24: warning: 'sprintf' is deprecated: This function is provided for compatibility reasons only.  Due to security concerns inherent in the design of sprintf(3), it is highly recommended that you use snprintf(3) instead. [-Wdeprecated-declarations]
            ipLength = sprintf(buf, "%u.%u.%u.%u", b[0], b[1], b[2], b[3]);
                       ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/stdio.h:188:1: note: 'sprintf' has been explicitly marked deprecated here
__deprecated_msg("This function is provided for compatibility reasons only.  Due to security concerns inherent in the design of sprintf(3), it is highly recommended that you use snprintf(3) instead.")
^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/sys/cdefs.h:215:48: note: expanded from macro '__deprecated_msg'
        #define __deprecated_msg(_msg) __attribute__((__deprecated__(_msg)))
                                                      ^
In file included from server/server.cpp:2:
In file included from include/App.h:52:
In file included from include/HttpContext.h:26:
include/AsyncSocket.h:217:24: warning: 'sprintf' is deprecated: This function is provided for compatibility reasons only.  Due to security concerns inherent in the design of sprintf(3), it is highly recommended that you use snprintf(3) instead. [-Wdeprecated-declarations]
            ipLength = sprintf(buf, "%02x%02x:%02x%02x:%02x%02x:%02x%02x:%02x%02x:%02x%02x:%02x%02x:%02x%02x",
                       ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/stdio.h:188:1: note: 'sprintf' has been explicitly marked deprecated here
__deprecated_msg("This function is provided for compatibility reasons only.  Due to security concerns inherent in the design of sprintf(3), it is highly recommended that you use snprintf(3) instead.")
^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/sys/cdefs.h:215:48: note: expanded from macro '__deprecated_msg'
        #define __deprecated_msg(_msg) __attribute__((__deprecated__(_msg)))
                                                      ^
server/server.cpp:141:71: warning: unused parameter 'opCode' [-Wunused-parameter]
        .message = [](auto *ws, std::string_view message, uWS::OpCode opCode) {
                                                                      ^
server/server.cpp:129:42: error: no matching member function for call to 'push_back'
            channels[socketData->gameId].push_back(ws);
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/type_traits:3918:23: note: in instantiation of function template specialization 'main()::(anonymous class)::operator()<uWS::WebSocket<true, true, PerSocketData>>' requested here
_LIBCPP_INVOKE_RETURN(static_cast<_Fp&&>(__f)(static_cast<_Args&&>(__args)...))
                      ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/type_traits:3934:5: note: while substituting deduced template arguments into function template '__invoke' [with _Fp = (lambda at server/server.cpp:124:17) &, _Args = <uWS::WebSocket<true, true, PerSocketData> *>]
    _VSTD::__invoke(declval<_XFp>(), declval<_XArgs>()...));
    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/__config:858:15: note: expanded from macro '_VSTD'
#define _VSTD std::_LIBCPP_ABI_NAMESPACE
              ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/type_traits:3940:28: note: while substituting deduced template arguments into function template '__try_call' [with _XFp = (lambda at server/server.cpp:124:17) &, _XArgs = (no value)]
  using _Result = decltype(__try_call<_Fp, _Args...>(0));
                           ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/type_traits:3984:13: note: in instantiation of template class 'std::__invokable_r<void, (lambda at server/server.cpp:124:17) &, uWS::WebSocket<true, true, PerSocketData> *>' requested here
            __invokable_r<_Ret, _Fp, _Args...>::value,
            ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/type_traits:4140:31: note: in instantiation of template type alias '__nothrow_invokable_r' requested here
    : integral_constant<bool, __nothrow_invokable_r<_Ret, _Fn, _Args...>::value> {};
                              ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/type_traits:4148:7: note: (skipping 1 context in backtrace; use -ftemplate-backtrace-limit=0 to see all)
    = is_nothrow_invocable_r<_Ret, _Fn, _Args...>::value;
      ^
include/MoveOnlyFunction.h:282:30: note: in instantiation of variable template specialization 'std::is_nothrow_invocable_r_v<void, (lambda at server/server.cpp:124:17) &, uWS::WebSocket<true, true, PerSocketData> *>' requested here
                        std::is_nothrow_invocable_r_v<R, FCall, ArgTypes...>)>,
                             ^
include/MoveOnlyFunction.h:354:1: note: in instantiation of template type alias 'can_convert' requested here
__OFATS_ANY_INVOCABLE(, , false, &)               // 000
^
include/MoveOnlyFunction.h:301:46: note: expanded from macro '__OFATS_ANY_INVOCABLE'
        class = std::enable_if_t<any_detail::can_convert<                      \
                                             ^
include/MoveOnlyFunction.h:354:1: note: in instantiation of default argument for 'any_invocable<(lambda at server/server.cpp:124:17)>' required here
__OFATS_ANY_INVOCABLE(, , false, &)               // 000
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/MoveOnlyFunction.h:303:5: note: expanded from macro '__OFATS_ANY_INVOCABLE'
    any_invocable(F&& f) {                                                     \
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
server/server.cpp:124:17: note: while substituting deduced template arguments into function template 'any_invocable' [with F = (lambda at server/server.cpp:124:17), $1 = (no value)]
        .open = [](auto *ws) {
                ^
server/server.cpp:67:6: note: while substituting deduced template arguments into function template 'ws' [with UserData = PerSocketData]
    .ws<PerSocketData>("/game/:gameId", {
     ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/vector:735:36: note: candidate function not viable: no known conversion from 'uWS::WebSocket<true, true, PerSocketData> *' to 'const std::__vector_base<uWS::WebSocket<true, true, PerSocketData>, std::allocator<uWS::WebSocket<true, true, PerSocketData>>>::value_type' (aka 'const uWS::WebSocket<true, true, PerSocketData>') for 1st argument; dereference the argument with *
    _LIBCPP_INLINE_VISIBILITY void push_back(const_reference __x);
                                   ^
/Library/Developer/CommandLineTools/SDKs/MacOSX13.1.sdk/usr/include/c++/v1/vector:738:36: note: candidate function not viable: no known conversion from 'uWS::WebSocket<true, true, PerSocketData> *' to 'std::vector<uWS::WebSocket<true, true, PerSocketData>>::value_type' (aka 'uWS::WebSocket<true, true, PerSocketData>') for 1st argument; dereference the argument with *
    _LIBCPP_INLINE_VISIBILITY void push_back(value_type&& __x);
                                   ^
In file included from server/server.cpp:2:
In file included from include/App.h:52:
In file included from include/HttpContext.h:27:
In file included from include/WebSocketData.h:24:
include/TopicTree.h:204:34: warning: implicit conversion loses integer precision: 'std::unordered_set<uWS::Subscriber *>::size_type' (aka 'unsigned long') to 'int' [-Wshorten-64-to-32]
        int newCount = topicPtr->size();
            ~~~~~~~~   ~~~~~~~~~~^~~~~~
include/WebSocket.h:291:70: note: in instantiation of member function 'uWS::TopicTree<uWS::TopicTreeMessage, uWS::TopicTreeBigMessage>::unsubscribe' requested here
        auto [ok, last, newCount] = webSocketContextData->topicTree->unsubscribe(webSocketData->subscriber, topic);
                                                                     ^
server/server.cpp:194:17: note: in instantiation of member function 'uWS::WebSocket<true, true, PerSocketData>::unsubscribe' requested here
            ws->unsubscribe(socketData->gameId);
                ^
4 warnings and 1 error generated.
make: *** [server.out] Error 1
